Update whisper.cpp (default to use CMake)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install GNU Octave
       run: |
-        sudo apt-get update && sudo apt-get install -y octave liboctave-dev && \
+        sudo apt-get update && sudo apt-get install -y cmake octave octave-dev && \
         octave --version
 
     - name: Compile MEX file
